--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "dependencies": {
+    "@nestjs/mapped-types": "*"
+  },
   "name": "ems-medium-segment",
   "private": true,
-  "packageManager": "pnpm@10.15.0",
+  "packageManager": "npm@10.8.2",
   "workspaces": [
     "apps/*",
     "packages/*"
