--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "@nestjs/mapped-types": "*"
   },
   "name": "ems-medium-segment",
+  "version": "0.0.1",
   "private": true,
-  "packageManager": "npm@10.8.2",
+  "packageManager": "npm@10.9.3",
   "workspaces": [
     "apps/*",
     "packages/*"
